--- a/src/app/components/carica-cv-admin/carica-cv-admin.component.html
+++ b/src/app/components/carica-cv-admin/carica-cv-admin.component.html
@@ -111,32 +111,16 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="wrapper p-3">
                             <div class="form-group my-2">
-                                <label for="exampleInputEmail1">Inserisci titolo cv</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
+                                <label for="titolo">Inserisci titolo cv</label>
+                                <input [(ngModel)]="this.titolo" type="text" class="form-control" id="titolo"
+                                    aria-describedby="titolo" placeholder="Inserisci titolo per il cv">
 
                             </div>
                             <div class="form-group my-2">
-                                <label for="exampleInputEmail1">inserisci competenze</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
-
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-lg-6">
-                        <div class="wrapper p-3">
-                            <div class="form-group my-2">
-                                <label for="exampleInputEmail1">Descrizione cv </label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
-
-                            </div>
-                            <div class="form-group my-2">
-                                <label for="exampleInputEmail1">esperienze precedenti</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
+                                <label for="competenze">inserisci competenze</label>
+                                <input [(ngModel)]="this.competenze" type="text" class="form-control" id="competenze"
+                                    aria-describedby="competenze"
+                                    placeholder="Inserisci un riassunto per le competenze del candidato">
 
                             </div>
                         </div>
@@ -145,14 +129,34 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="wrapper p-3">
                             <div class="form-group my-2">
-                                <label for="exampleInputEmail1">Istruzione candidato</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
+                                <label for="descrizione">Descrizione </label>
+                                <input [(ngModel)]="this.descrizione" type="text" class="form-control" id="descrizione"
+                                    aria-describedby="descrizione"
+                                    placeholder="Inserisci una descrizione per il candidato">
+
                             </div>
                             <div class="form-group my-2">
-                                <label for="exampleInputEmail1">lingue conosciute</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Enter email">
+                                <label for="esperienze">esperienze precedenti</label>
+                                <input type="text" class="form-control" id="esperienze" aria-describedby="esperienze"
+                                    placeholder="Inserisci esperienze candidato" name="esperienze"
+                                    [(ngModel)]="this.esperienze">
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-6 col-lg-6">
+                        <div class="wrapper p-3">
+                            <div class="form-group my-2">
+                                <label for="istruzione">Istruzione candidato</label>
+                                <input [(ngModel)]="this.istruzione" type="text" class="form-control" id="istruzione"
+                                    name="istruzione" aria-describedby="istruzione"
+                                    placeholder="Enter livello di istruzione del candidato">
+                            </div>
+                            <div class="form-group my-2">
+                                <label for="lingue">lingue conosciute</label>
+                                <input [(ngModel)]="this.lingue" type="text" class="form-control" id="lingue"
+                                    aria-describedby="lingue" placeholder="inserisci lingue conosciute" name="lingue">
                             </div>
 
                         </div>
